Added Window Managment

--- a/Source/DragonEngine/ObjectBrowserWindow.resx
+++ b/Source/DragonEngine/ObjectBrowserWindow.resx
@@ -123,6 +123,187 @@
   <metadata name="IconList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>145, 17</value>
   </metadata>
+  <data name="IconList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACy
+        KAAAAk1TRnQBSQFMAgEBawEAAXgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAbABAQIAAQEBAAEIBgABbBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wD/AAkAAwc9AAPw
+        /wD/AEwAAfcJAAERDAABBygAAREVAAHvAQAB7ywAAf8PAAHrAwABEicAAesSAAH3BQAB8z4AAfQoAAHz
+        BQABEQ8AAfQXAAHwJgAB8h0AAe8NAAH/AQAB7wEAAQcPAAHzIAABDgHzNwAB/xQAAf8uAAH3AwAB//8A
+        fAAB8mAAAf8dAAHyCwABBwkAAf8HAAH/AgAB/xMAAf8gAAFtCAAC/xEAAQ6gAAEQHAABDiEAARAQAAH0
+        QAAB/0oAAfAVAAHv/wBJAAftCQAH7RsAAQ8CAAGSOgABFT4AAZICAAH/AgABED0AAfACAAFDAQAB+CUA
+        AUMJAAHwBwABEQQAAf8yAAFtBwABbQQAAe0yAAFtCQABEQ0AB20JAAdtEQABbQgAAfQGAAH0FgAB9wHq
+        Af8MAAEVCQAB8gYAAf8CAAEOAfcBbR8AAewbAAH/QgAB9AH/DQABEAEPAUNNAAHtAgAB//8AGwAB/wEA
+        AfIcAAltDwAB/woAAfITAAESKAAB/wIAAfIFAAH/KAAFDwwAAfK8AAMHAf8CAAQHBQAB6gkAAfMpAAHy
+        DQAB7wUAAfArAAHyBQAB/zkAAfJ0AAHy/wBHAAEQDwABEAUAARAJAAEQBQABEAMAAe8IAAEQAwABQzIA
+        AW0OAAESMAABbT8AAW0/AAFtBgAB7QcAAf8wAAFtDQABbTEAAW0IAAH0IgAB6g8AAeoDAAFtPwABbT8A
+        AW0IAAHx/wBlAAHvKAAHbQH/DQAB/wMAAbwcAAH3PwABEh0AAfQLAAESMQABDgIAAf89AAEOFQAB8wcA
+        Af8hAAHsHQABBx0AAQ4EAAERAQAB/wESAfQJAAH/FgABBwgAAe8NAAHwAe0HAAGSBgABBwIAAf8VAAEO
+        JwABvCEAAe0RAAESDAABB/8AnwABBwHtFgABbSkAAesVAAFtKgAB6xQAAW0rAAH4EwABbSwAAfgSAAFt
+        LQAB6xEAAW0WAAHwB20B8Q0AARALAAVtAgABbR4AARAMAAEQEwABbQ0AAQ4PAAEOHQAB8hAAAQ4PAAEO
+        SgABFAEQMQABQ/8ATgAB8AQAAQ4LAAEOEQAB9wEHDAABEg4AAe8vAAESDwAB7xEAAQ8B9AsAAQcPAAHq
+        EAAB7xIAAQ4NAAH/AgAB8QIAARUGAAESEQAB7wEOKwABEhIAAe8QAAHwLgAB7w4ABAcCAAHrDAAB7wEA
+        AUMCAAHtCwAB/wwAAe8RAAHvAgABDh4AAf8LAAHvAgAB/wsAAf8FAAH/CgAB/xQAAf8KAAHvDwAB8gMA
+        Aev/AJ4AAfQB/y0AAe8NAAH/BQABESsAAW0QAAFtHQABDgMPDQABbQ4AAfMGAAHvGAAB7xAAAW0LAAH/
+        AQABESAAAe8cAAESBQABDxwAAe8cAAHqIgAB7w0AA20BDwIAA20BvCgAAe8QAAFtDgABBwYAAfMYAAHv
+        EAABbRMAAfgrAAFt/wCdAAHxAQABDw0AAfEBAAEPDgABEgQAARUMAAFtFQABbRgAARIQAAFtIwABEQsA
+        AeoPAAFtEwABDhAAAfQLAAESHQAB7wMAAQ4B/woAAe8SAAESHAAB7wMAAfMLAAHvAgAB/yMAARQYAAHv
+        JQABFAoAAQ4B/wLvCwAB7wEAA+8gAAFtCgABDgH/DgAB7yAAAW0CAAFtCwAB/wUAAUMJAAEHBQABQxoA
+        AW0BAAEU/wBfAAHwAfJBAAH3BwABEAkAAe8uAAHxCAABBwHvBQAB8gFtBwABEQEAAfEBAAH/GgABBxAA
+        AQcB7wUAAfIBbSsAAQcMAAHvBgABbQsAAfEfAAH/Ae8LAAHvBgABbTcAAQcGAAHyAW0KAAH0CwAJbQG8
+        BwACbQQAAW0KAAHvBgABbQsAAW0CAAHyKQAB7wYAAW0GAAHvJAAB9AsAAQcB7wUAAfIBbQkAAe8BAAH/
+        MwABbSYAAfcID/8AKwABB0AAAW0RAAEOAfNBAAH0DwABbQ8AAW0WAAH/GAABbQ8AAW0IAAESPgAB7Q8A
+        AZI0AAFDAQAB9A0AAUMBAAH0EAABbQ8AAW0vAAFtDwABbQwAARIBAAHxDQABEgEAAfEoAAETAgABEgEO
+        CwABEwIAARIBDgkAAfMBbQHvAQAB7QFtAfQBAAJtBgAB8wFtAe8BAAHtBW0wAAFtDwABbSUAAQ4FAAEO
+        AwAB7AUAAQ4JAAHs/wBdAAFtAf8bAAHvAW0B7HkAAQcJAAHsGQABDg8AAfIuAAEOHQABQwFtBgAB/woA
+        AfIqAAHwAwABDwcAARQIAAEHAfIbAAFtAQAFbQIAAW0FAAH/BgAB9AIAAQc1AAEPAgAB8gMAAW0BDzcA
+        Af8GAAH/AgABvC4AAe0uAAHx/wApAAnvAfQGAAnvAfQvAAFtDwABbQkAAfILAAHzCm0PAAFtDwABbQgA
+        Af8mAAHzDwAB8wkAAf8NAAH/BgAB/ygAAf8BAAHyAwABDgkAAQcBEwQAAe0BFI4AAQ4OAAH/CQABBwEA
+        AQcB/wIAAQcB/wEAAQcoAAHtEAAB8gQAAf8LAAH0LQABDgMAAf8rAAH/EAAB8iEAAeoB6wwAAf8BDwES
+        /wBbAAnvAfQFAAEQCQAB7x8AAW0PAAFtDwABbQ0AAf8RAAFtDwABbQ8AAW0fAAFtDwAB8w8AAW0VAAEO
+        CQAB7R8AAW0pAAHtAQAB8GwAAf8OAAH/IgAB7wH/mwABEgMAAfceAAEPAewcAAH0ARIB9P8AJQAB8y4A
+        AfIBBw8AAfIIAAH/AwAB6woAAm0B8wIAAm07AAHyFQAB8g8AAfIHAAGSEQAB8gsAARIBAAFtDQABEgEA
+        AW0HAAHyBwABbQQAAQcCAAHvCQAB8g0AAfADAAHsCwAB8AMAAewMAAH/AgABDj0AAQcaAAHzAQAB8QH/
+        AfQGAAH/BAAB8wEAAfEB/wH0BgAB/wYAAfMBAAFtAQAB8AsAAfIPAAHrBAABBwFtAf8IAAHrBAABBwFt
+        Af8LAAHrAQAB/wsAAfEOAAEHDwABBxcAAfQJAAHxDwAB/wEAARINAAH/AQABEg0AAfAEAAERCwAB8g4A
+        ARQB8w4AARQB8yAAAfL/AFAAAes0AAHyAfMTAAEOCwAB9ycAAf82AAHyCQAB/w0AAfINAAESAQABbQ0A
+        ARIBAAFtJAAC/wkAAfADAAHsCwAB8AMAAewUAAH4BgAB8jcAAfgGAAHyAQcMAAHzAQAB8QH/AfQGAAH/
+        BAAB8wEAAfEB/wH0BgAB/w4AAfgRAAEOBQAB6wQAAQcBbQH/CAAB6wQAAQcBbQH/DwAB7BgAAQcPAAEH
+        FQAB+BsAAf8BAAESDQAB/wEAARItAAEUAfMOAAEUAfP/AFAAAW0CAAEUAfQNAARtBwAB8QNtCwABEAkA
+        Ae8JAAFtDgAB8iYAAW0JAAFtDQAB8Q8AAW0XAAFtCQABbQwAAfEQAAFtAfEWAAFtCQABbQsAAfARAAFt
+        Ae8WAAFtCQABbQHwAf8bAAFtAe8gAAFtEAADbQoAAW0B/wJtDQAB8gMAAfIMAAFtDQAB/w8AAW0hAAFt
+        DgAB/wHyEQAC8gsAAfEDAAH/PAAB8v8AGQACJggAASwBAAH5AwACJggAASwBAAH5IwACJgUAAfkCLAEA
+        AfkEAAImBQAB+QIsAQAB+SQAAiYBLAEAASAC+QEsArwB+QUAAiYBLAEAASAC+QEsArwB+QwAAfcBAAH/
+        FgADLAEmAvkBLAHtAgEBAAHtAQABJgEsAfsDLAEmAvkBLAHtAgEBAAHtAQABJgEsAfsWAAH/CQAC+QEs
+        ASYB+QIsAQECbQEBAiYBLAE4AQAC+QEsASYB+QIsAQECbQEBAiYBLAE4CAAB/wEPDgAB/wgABPkCJgE4
+        AfsDJgEsAjgCAAT5AiYBOAH7AyYBLAI4GAAB/wkABfkBJgH7ASYDDgL7AwAF+QEmAfsBJgMOAvsjAAX5
+        ASYB+wEmAw4C+wMABfkBJgH7ASYDDgL7HQAB/wkAAywBOAP7CQADLAE4A/sZAAEOBgAB/wYAAywBJgEs
+        AfsKAAMsASYBLAH7HQABDg4AASwBOA4AASwBOCAAAQ4NAAE4DwABOBQAAewZAAE4DwABOC8AAfsPAAH7
+        LgABLA8AASwvAAEsDwABLKMAAW0CAAFDCQABEAYAAfMCAAHvLQAB8Q0AAfQDAAFtHQAB/w0AAfICAAH/
+        CwAB9AQAAW0KAAH0GgABDgYAAf8cAAHzPgAB8y4AAfQPAAH0LgAB9A8AAfQSAAEOCwAB6gYAAfcIAAHz
+        IAAB8RMAAfcUAAFtPwABbSkAAvT/AI8AAfMBbQHsDQAB8wFtAewrAAH0DwAB9BIAAfcWAAHyBAAB/w8A
+        Af8UAAH/FQAB8gkAAQ4DAAHyDwAB8hYAAbwBBwHzAfIBAAEHAfAEAAHyBwABES4AAfQCAAHwAe8EAAHy
+        CQAB8xkAAe0bAAHyBwAB+A8AAfAB8iYAAfIHAAHvAQABDgHvAgAB9wkAAe0CAAHtAgAB9wgAAf8GAAGS
+        EQAB8gQAAQcPAAEHMAABEQ8AARExAAFtAQ8BEQH0DAABbQEPAREB9P8ApAAB7w8AAe8PAAHvHwAB7w8A
+        Ae8PAAHvEAAB8g4AAe8PAAHvDwAB7xAAAfIIAAH/BQAB7wYAAUMIAAHvBwAB7QHqAQcBkgERAwAB7wUA
+        BPQB8AH0AbwBkgH0AgAB8g4AAe8GAAFDAQAB/wYAAe8KAAEHBAAB7wUAAQ8BAAEUARIB8gFtAe8EAAHy
+        CQAB8gQAAe8GAAFDCAAB7wgAAfEB9AEAAQ4DAAHvEAAB8g4AAe8PAAHvDwAB7xAAAfIOAAH/DwAB/w8A
+        Af8QAAHy/wDIAAHzAW0B7DsAAfQYAAHvDwAB7w8AAe8FAAH/GQAB7w8AAe8PAAHvCAAB8gUAAfIQAAHv
+        DwAB7w8AAe8IAAHyDwAB8gJDBAAB7wgAARIGAAHvBwAB8QESAfIB6gEQAwAB7wgAAfIPAAHyBgAB7w8A
+        Ae8HAAHwAgAB8wQAAe8IAAHyAQAB8AFtDAAB8gYAAe8PAAHvBwAB8AEAAf8FAAHvCAAB7QHvAewDAAH3
+        EAAB7w8AAe8PAAHvBQABBw0AAfILAAHvAwAB8gsAAe8DAAHyCwAB7wYAARFBAAFtAQ8BEQH0/wB9AAHz
+        AW0B7A0AAfMBbQHsDQAB8wFtAewNAAHzAW0B7AsAAfQPAAH0DwAB9A8AAfQOAAH/DwAB/w8AAf8PAAH/
+        GAAB8g8AAfIJAAH/AQABBwMAAfEPAAHyGQABEA8AAQ8QAAHtAfcB9B4AAf8PAAH/DQAB/w8AAQ4PAAH/
+        DwABDwHzAfIPAAH/DQABFQHtBAAB9woAAfAEAAH3CQAD7QMAAZIPAAH3BgABBw8AAQcPAAEHDwABBxAA
+        AREPAAERDwABEQ8AARERAAFtAQ8BEQH0DAABbQEPAREB9AwAAW0BDwERAfQMAAFtAQ8BEQH0/wBPAAEP
+        DwABD2MAAW0eAAH0IAABbR0AAfIhAAFtHwAB7x8AAW0fAAFtHwABbQUAAvcOAAL3KAABbQcAAfMPAAHz
+        BQABByEAAW0IAAHzDwAB8wwAAfMKbQEHDgABbQkAAfQPAAH0JQABbSUAAQ4PAAEOBQABDgMAAez/AHkA
+        AfA/AAHvPwAB7z8AAe8/AAHvTwAB7z8AAe8SAATvAfEFAAHwBO8eAAHvPwAB7z8AAQf5AAFCAU0BPgcA
+        AT4DAAEoAwABQAMAAbABAQIAAQEBAAEBBQABgAENFgAD/wEABv8CAAb/AgAB/wHnAf8B5wH/AecCAAH/
+        AcMB/wHDAf8BwwIAAf8BgwH/AYMB/wGDAgAB+AEHAfgBBwH4AQcCAAHzAY8B8wGPAfMBjwIAAfQBXwH2
+        Ad8B9wHfAgAB9AFfAfQBXwH0AV8CAAH0AV8B9gHfAfcB3wIAAfMBnwHzAZ8B8wGfAgAB+AE/AfgBPwH4
+        AT8CAAb/AgAG/wIABv8CAAb/AgAQ/wHwAQcB4AEDAf8BxwH/AecB8AEHAeABgwH/AYMB/wHDAfABBwHw
+        AQcB/wETAf8BgwHwAQcB8AGHAf4BAwH4AQcB8AEHAfgBjwH4AQcB8wGPAfABBwH4AY8B8AEPAfcB3wHg
+        AQcB/AGfAfIBHwH3Ad8B4AF/AfwBHwH3AR8B9wHfAeABBwH+AT8B/gE/AfMBnwHwAQcB/wE/AfwBfwH4
+        AT8B/wEHJv8B8AEDBv8B8AEDBv8B8AGDA/8BjwH8Af8B8AHDAeABAwH7AQcB+AF3AfABAwHgAQMB8AEH
+        AfABJwHwAQMB8AEHAfABDwH4AQcB8AEDAfgBDwHwAR8B/AEHAfsB/wH8AR8B8AE/Af4BBwH7Af8B/gE/
+        AfABHwH+AQcB+wHnAf8BfwHwAQ8B/AEHAfsB5wL/AfABHwH8AQcB+AEHKP8B+AEPAfgBDwL/Af4BHwH4
+        AQ8B+AEPAfgBDwH4AQ8B+AEPAfgBDwH+AT8B8AHHAfgBDwH4AQ8B/gE/AfMBYwH4AQ8B+AEPAeABAwHy
+        ARMB+AEPAfgBDwHgAQMB8gETAfgBDwH4AQ8B4AEDAfIBMwH4AQ8B+AEPAeABAwHxAeMB+AEPAfEB/wHg
+        AQMB8AEHAfgBDwHwAT8B+AEPAfgBDwH4AQ8B8AEPA/8BPwH+AT8B/AEPBv8B/gFfIv8B8AHTAv8B8AEH
+        AfABBwHwAcMB+AGPAfABBwHwAQcB8AHDAfgBDwHwAQcB8AEHAfABwwH4AQ8B8AEHAfMB5wL/AfgBDwHw
+        AQcB8wHnAv8B8AEHAfABBwHzAecB8AHDAeABAwHwAQcB8wHnAfABwwH4AQ8B8AEHAfMB5wHwAcMB/gE/
+        AfABBwHzAecB8AHTAf8BfwHwAQcB8AEHBv8B8AEHKP8B4wH/AeIBPwHiASMB/AEfAeMB/wHiAT8B4gEj
+        AfABBwHjAf8B4gE/AeIBIwHwAQcB4wH/AeIBPwHiASMB8AEHAeMB/wHiAT8B4gEjAfABBwL/Af4BPwH+
+        ASMB+AEPAv8B/gE/Af4BIwH8AT8C/wH+AT8B/gEjAfwBHwX/AeMB/AEfBf8B4wH8AT8r/wHvBP8B8AEP
+        Af8BgwH4AQcB/AHHAfABDwH/AYMB+AEHAfwBxwH3Ac8B/wEDAfABBwL/AfcBPwHwAQcB8AEHAfwBBwH2
+        ARcB4AH/AfABAwH4AQcB9AEHAeAD/wH4AQcB9gEHAeABRwHxAecB+AEDAfEBBwHzAQMB8AHHAfgBAwH/
+        AQcB/wGDAfgBjwHgAQMB/gEHAf8BgwH8AZ8F/wHHLP8B+QH/AeABAwT/AfgB/wHnAfMD/wF/AfgBfwHn
+        AfMB/gG/Af4BPwH4AT8B5wHzAfwBnwH8AR8B+AEfAecB8wH4AY8B+AEPAfgBDwHgAQMB8AGHAfABBwH4
+        AR8B4AEDAfABhwHwAQcB+AE/AeMBowH4AY8B+AEPAfgBfwHjAacB/AGfAfwBHwH4Af8B4AEPAf4BvwH+
+        AT8B+Qb/AX8o/wHxAecB/gE/Af8BnwH+AXkB8QHHAf4BPwH/AY8B/AFxAfEBhwH/AT8B8wGHAfgBYQHx
+        AQcB/gE/AfABwwHwAUEB8AEHAf4BPwHwAWMB4AEBAfABBwH+AR8B8AFjAeABAQHxAQcB+AEPAfABQwHw
+        AQEB8QGHAfgBDwHwAQcB+AFBAfEBhwH4AQ8B/AEPAfwBYQHxAecB/AEfAv8B/gF5L/8BPwL/AfgBDwH+
+        AT8B+AEPAfABhwH4AQ8B/gE/AfgBBwHwAYcB+AEPAf4BPwHxAeMB8AGHAfkBzwH+AT8B4wHzAfABhwH5
+        Ac8B8AEDAecBMwHwAYcB+QHPAfABAwHnATMB8AGHAfkBzwHwAQMB8wEzAfABhwH5Ac8B/gE/AfEBIwHw
+        AYcB+QHPAf4BPwH7AScB8AGHAfgBDwH+AT8B/wE/AfABhwH4AQ8s/wHxAf8B8QH/AfMBxwH+AX8B8AHz
+        AfAB/wHxAccB8gE/AfABpwHwAY8B8AHHAfIBHwH4Ac8B+AGHAfABRwHwAQ8B/AGHAfwBhwHwAQcB8AEH
+        Af0BBwH8AYcB8AEHAfABAwH+AWcB/AHnAfABRwHwAQcB/AEHAfwBBwHwAccB8AEPAfgBBwH8AQcB8QHH
+        Af4BHwH8AQcB/AEHAfMBxwH+AT8r/wE/Bv8B/AEPAeABAwT/AfgBBwHpAdMB+AGPAv8B8AEHAekB0wHg
+        AUMC/wHwAYcB4QHDAeABAwHwAQMB8QEHAeEBwwHgAUMB8AEDAfEBJwHoARMB8AEHAfABAwHxAScB4QHD
+        AfgBhwL/AfcBNwHhAcMB8AGHAv8B9wE3AekB0wH4AY8C/wL3AeABAwT/AfABByT/Af4H/wH+AT8B/QHP
+        BP8B/gE/AfABwwHiASMB4gEDAf4BPwHwAYcB4gEjAeIBAwH8AR8B+AEPBP8B+AEPAfgBDwT/AfkBxwH5
+        AccB4gEjAeIBAwH5AecB+QHnAeIBIwHiAQMB+QHHAfkBxwT/AfgBDwH4AQ8B4gEnAeIBBwH8AR8B/AEf
+        AeIBIwHiAQME/wHiASMB4gEDKP8BwAEDAf8BzwHwAQMB/gE/AcABGwH/AY8B8AGDAfgBDwHAARsB/wEP
+        AfABgwHoAQsByAEDAf4BDwHwAcMByAEJAcABPwH8AQ8B8AEDAcABAQH8Ab8B+AEPAfABAwHEAREB/AE/
+        AfwBDwHwAQMB4gEDAfwBPwH+AQ8B+wHnAeABAwP/AQ8B+wHnAeIBAwP/AY8B+AEHBf8BzyT/AfABAwHw
+        AQME/wHwAQMB8AEDAfABwwHgAQMB8AEDAfABAwHxAeMB4AEDAfABAwHwAQMB8AHDAeABAwH/AT8B/wE/
+        AfABywHgAQMB/wE/Af8BPwL/AeABAwH/AT8B/wE/Av8B/AEfAf8BDwH+AR8B9AHLAfwBHwH/AQ8B/AEf
+        AfABwwH8AR8B/wEPAfwBHwHxAcMB/AEfAf8BDwH8AR8B8AHDA/8BnwH+AT8q/wHwAQMB4AEDAfwBDwHg
+        AQMB8AEDAeABAwH8AQ8B4AETAfABAwHgAQMB/gE/AeABEwHwAQMC4wH+AT8B4AEDAf8BPwHjAWMB/gE/
+        Af4BPwH+AT8B/gE/AfwBPwH+AT8B/gF/AfwBHwH8AT8B/AE/AfgBfwH8AR8B/wE/AfwBHwH4AT8B/gE/
+        Af4BPwH8AR8B+AE/Af4BPwH+AT8B/AEfAfgBPwP/AT8C/wH8AX8h/wHxAf8B+QX/AfEB/wH5Af0BHwH4
+        Ac8B/wHxAf8B8QH4AR8B+AHHAf8B+QH/AfEB+AEHAfgBxwHjAfEB4wLxAcMB+AHHAeABPwHgAT8B8QEv
+        AfABAwHsAQcB7AEHAfIBIwHwAQMBwAEDAcABAwHxAWMB8AEHAcABBwHAAQcB8AGPAfgBDwHwAQcB8AEH
+        AfoBBwH8AR8B/AEHAfwBBwH8AU8B/gE/AfwB/wH8BP8BfyX/Af0B/wHxAe8BPwP/Af0B/wHxAecBHwHA
+        AQEB/wH9Af8B8QHhAQ8BwAEBAf8B/QH/AfkB4AEHAcgBAQHjAfkB4wHxAeABAwHeAQUB4AE/AeABPwHg
+        AQEByAEBAewBBwHsAQcB4AEDAcABAQHAAQMBwAEDAeEBBwHAAQEBwAEHAcABBwHjAQ8B/wF/AfABBwHw
+        AQcB5wEfAf8BfwH8AQcB/AEHBP8B/AH/Afwp/wH4AQ8B/wGHAfAB/wHgAQMB+gEHAfwBhwHwAZ8B4AED
+        AfoBBwH4AfcB8wGPAeABAwH6AQcB8AEXAfABBwLjAfoBBwHgARcB8AEDAeIBIwH6AQcB8AEXAfABAwH+
+        AT8B+gEHAfgBFwHwAQcB/AEfAfoBBwH4AfcB8wGPAfwBHwH6AQcB/AGHAfABnwH8AR8B+QEHBP8B/gF/
+        Iv8BPwHXAT8B1wT/AT4BLwE+AS8E/wEQAR8BEAEfAf4BPwH8AQcBAAEIAQABCAH+AT8B/AEHAQABAQEA
+        AQEB/gF/Af4BBwEAAQMBAAEDAv8B/AEHAQABBwEAAQcB/gE/AfwBBwEAAQcBAAEHAf4BPwH4AQcB8AEf
+        AfABHwH+AT8B8AFnAcAB/wHAAf8B/gE/AfgB/wHzAf8B8wH/Af4BPwH9Af8B9wH/AfcB/wH+AT8C/wHv
+        Af8B7wX/Ae8B/wHvBf8B3wH/Ad8F/wHfAf8B3xP/AfwBPwHjAcME/wH4AQ8B4QGDAv8B8AEPAfABhwHg
+        AQMB/wF/AfABHwHgAccB8AEHAf4BPwHwAT8B4AHnAfgBDwH8AR8B8AEfAeAB5wH4AR8B+AEPAfABDwHg
+        AecB8AEPAfABBwHwAQcB4AHHAeABBwHwAQMB8wEHAfABDwHgAYMB8AEDAf8BjwH4AR8B4QHDA/8B3wH+
+        AX8w/wH+AT8B/gE/Av8BwAEBAfgBDwH4AQ8B/gF/AcABAAHwAQcB8AEHAfwBPwHAAQAB8QEjAfABgwH4
+        AT8BwAEAAfABwwHwAYMB8AEfAcgBgAHwAYMB8AHDAeABDwHAAQAB8AHDAfABQwHxAQcBwAEAAfABAwHw
+        AQMB+QGDAcABAAHwAQcB8AEHAf8BxwL/AfgBDwH4AQ8B/wHvAv8B/gEfAf4BHzL/AcABAQHAAQEBwAEB
+        AcABAQHAAQEBwAEBAcABAQHAAQABwQFBAcABAQHAAQEBwAEAAcEBAQHBAUEBxAEBAcABAAHBAUEBwAFB
+        AcUBAQHEAQgBwQGBAcMBQQHGAUEBwAEAAcABAQHAAQEBwAEBAcABAAHAAQEBwAEBAcABAQHAAQA4/wH+
+        AT8G/wH4AQ8BwAEBAcABAQHAAQEB8AEHAcABAQHAAQEBwAEBAfABwwHAAQEBwAEBAcABAQHwASMBwAEB
+        AcIBQQHAAQEB8AHDAcABAQHCAUEBwAEBAfABAwHAAQEBwgFBAcABQQHwAQMBwAEBAcABAQHAAQEB8AEH
+        AcABAQHAAQEBwAEBAfgBDwb/Af4BHy7/Af4BPwH+AT8B/gE/Af4BPwH4AQ8B+AEPAfgBDwH4AQ8B8AEH
+        AfABBwHwAQcB8AEHAfABgwHxAcMB8AGDAfABAwHwAYMB8AGDAfABQwHxAQMB8AGDAfABAwHwAYMB8AFD
+        AfABgwHwAUMB8AEDAfABgwHwAQMB8AEDAfABAwHwAYMB8AEHAfABBwHwAQcB8AEHAfgBDwH4AQ8B+AEP
+        AfgBDwH+AR8B/gEfAf4BHwH+AR8p/wE/Af8BPwT/Af4BPwH+AT8B4AEBAeIBIwH8AT8B/AE3AeABAQHi
+        ASMB+AE/AfgBJwL/AeIBIwHgAT8B4AEzAv8B4gEjAeABPwHgATMB4AEBAeIBIwHgAT8B4AE3AeABAQHi
+        ASMB+AE/AfgBJwL/AeIBIwH8AT8B/AE/AeABAQHiASMB/gE/Af4BPwHgAQEB4gEjBP8B4AEBAeIBIyn/
+        AX8E/wH8AT8B/gE/Af4BfwH/AT8B/AE/AfwBHwH8AX8B/wEfAfwBPwH4AQ8B+AF/Af8BDwH8AT8B8AEH
+        AfABAwHgAQcB/AE/AfABBwHgAQMB4AEDAfABBwH8AT8B8AEDAeABBwHwAQcB/AE/AfgBAwHgAQ8B+AEP
+        AfwBPwH8AX8B/wEfAfwBHwH8AT8B/gF/Af8BPwH+AT8B/AE/Bf8Bfxj/Cw==
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="AddItemDropDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -140,6 +321,21 @@
 </value>
   </data>
   <data name="EditItemButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="FileDropDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
